fix(toggle): improve font color contrast

--- a/src/styles/color-modes/light.less
+++ b/src/styles/color-modes/light.less
@@ -298,11 +298,11 @@
   --rs-rate-symbol-checked: var(--rs-blue-500);
 
   // Toggle
-  --rs-toggle-bg: var(--rs-gray-300);
+  --rs-toggle-bg: var(--rs-gray-400);
   --rs-toggle-thumb: #fff;
   --rs-toggle-loader-ring: rgb(from var(--rs-gray-50) r g b / 30%);
   --rs-toggle-loader-rotor: var(--rs-gray-0);
-  --rs-toggle-hover-bg: var(--rs-gray-400);
+  --rs-toggle-hover-bg: var(--rs-gray-500);
   --rs-toggle-disabled-bg: var(--rs-gray-200);
   --rs-toggle-disabled-thumb: #fff;
   --rs-toggle-checked-bg: var(--rs-primary-500);
